--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 				</execution>
 			</executions>
 		</plugin>
+		 <plugin>
+            		<groupId>org.sonarsource.scanner.maven</groupId>
+            		<artifactId>sonar-maven-plugin</artifactId>
+            		<version>6.2.1.4610</version>
+       		</plugin>
 	</plugins>
 	</build>
   
